<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="40dp"
    tools:context=".view.AgreeActivity">

    <ScrollView
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:text="@string/string_legal_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:padding="16dp"
            android:layout_marginBottom="8dp"
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:textAlignment="center"
            android:textStyle="bold"
            android:id="@+id/id_allow_access_popup"
            android:text="@string/string_allow_access_popup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <CheckBox
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_agree_data_consent"
            android:text="@string/string_agree_data_consent" />

        <CheckBox
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_agree_permissions_consent"
            android:text="@string/string_agree_permissions_consent"/>

        <CheckBox
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_agree_battery_consent"
            android:text="@string/string_agree_battery_consent"/>

        <Button
            android:enabled="false"
            android:textSize="24sp"
            android:text="@string/string_agree_next"
            android:id="@+id/id_agree_next"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>