<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="40dp"
    tools:context=".view.TrackingActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:textSize="24sp"
            android:id="@+id/id_current_time"
            android:textAlignment="center"
            android:lines="1"
            android:text="@string/string_id_start_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="24sp"
            android:id="@+id/id_current_latitude"
            android:textAlignment="center"
            android:lines="1"
            android:text="@string/string_id_start_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="24sp"
            android:id="@+id/id_current_longitude"
            android:textAlignment="center"
            android:lines="1"
            android:text="@string/string_id_start_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="32sp"
            android:id="@+id/id_currently_working"
            android:textAlignment="center"
            android:lines="1"
            android:text="@string/string_id_start_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_margin="20dp"
            android:textSize="24sp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/string_current_start"
            android:id="@+id/id_start_background_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:enabled="false"
            android:textSize="24sp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/string_current_stop"
            android:id="@+id/id_stop_background_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>